--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     margin: 0px;
     padding:0px;
     font-family: "Roberto", sans-serif;
+    z-index: 1;
 }
 .heading{
     text-align: center;
@@ -128,7 +129,8 @@ button[disabled]{
 table, th, td {
     
     border: 1px solid;
-    font-size: large
+    font-size: large;
+    color: white;
   }
 
 table{
@@ -197,6 +199,8 @@ input[type=checkbox] {
     position: relative; 
     margin-right: 40px;
 }
+
+
 
 
 /* The message box is shown when the user clicks on the password field */
@@ -299,11 +303,12 @@ input[type="file"] {
    height: 100%;
    animation-direction: alternate-reverse;
    
+   
 }
 
 /* Modal Content/Box */
 .modal-content {
-    
+    position: fixed;
     background-color: #0a0a0ad0;
     opacity: 1;
     margin: 15% auto; /* 15% from the top and centered */
@@ -314,12 +319,12 @@ input[type="file"] {
     font-size: larger;
     text-align: center;
     border-radius: 4rem;
-    color: aliceblue;
+   
   }
 
   /* The Close Button */
 .close {
-    color: #e2dada;
+    color: #070707;
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -331,6 +336,53 @@ input[type="file"] {
     padding: 1rem  2rem;
     border-radius: 2rem;
 }
+
+.preview-modal{
+    display:none;
+    position: fixed;
+    left:0;
+    top:0;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    animation-direction: alternate-reverse;
+   
+}
+.preview-modal-content{
+    z-index: 2;
+    width:40%;
+    height:70%;
+    background-color: #fff;
+    box-shadow: 2px 15px 15px 10px rgba(0,0,0,0.2);
+   margin: auto;
+   margin-top: 10rem;
+   padding:2rem;
+   
+}
+.preview-modal-content h1{
+    font-size: 2rem;
+}
+.background-div{
+    padding:2rem;
+    background-color: #e4caf5;
+    margin-top: 5rem;
+}
+.box{
+    margin: 2rem;
+}
+.box h1{
+    padding:0px 5px 0px 0px;
+    font-size: 1rem;
+    font-weight: 900;
+    margin-bottom: 1rem;
+}
+.each-field{
+    display: flex;
+    padding:2px;
+    gap:20px;
+}
+
+
 
 
 
