--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@
     width:80%;
     padding:15px;
     margin-top: 10px;
-    margin-bottom: 15px;
+    margin-bottom: 8px;
     border-radius: 10px;
     background-color: rgb(228, 222, 222);
     border-color: 1px solid rgb(48, 4, 89);
@@ -243,10 +243,10 @@ input[type="file"] {
     align-items: flex-end;
     flex-direction: column;
     overflow: hidden;
-    padding: 2px;
+    padding: 8px;
 }
 .toast{
-    width: 400px;
+    width: 280px;
     height:70px;
     background-color: #fff;
     display: flex;
@@ -258,7 +258,7 @@ input[type="file"] {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 .toast text{
-    padding-top: 10rem;
+    padding: 10rem;
 }
 .toast i{
     margin: 0 20px;
@@ -338,7 +338,7 @@ input[type="file"] {
 }
 
 .preview-modal{
-    display:none;
+    display: none;
     position: fixed;
     left:0;
     top:0;
@@ -350,38 +350,64 @@ input[type="file"] {
 }
 .preview-modal-content{
     z-index: 2;
-    width:40%;
-    height:70%;
+    width:25%;
+    height:65%;
     background-color: #fff;
     box-shadow: 2px 15px 15px 10px rgba(0,0,0,0.2);
    margin: auto;
    margin-top: 10rem;
-   padding:2rem;
+
+}
+.closeprofile{
+    color: #070707;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+    padding:1rem;
+}
+.background{
+    position: sticky;
+    background-color: #e7ddeb;
+    width:100%;
+    height: 40%;
+    overflow: hidden;
+}
+.profile-bg{
+    text-align: center;
+    width:100%;
+    height:100%;
    
 }
-.preview-modal-content h1{
-    font-size: 2rem;
+.profile{
+    position: fixed;
+    z-index: 10;
+    margin-left:7.5rem;
+    margin-top: 7rem;
+    width: 12%;
+    height:20%;
+    border-radius: 2rem;
 }
-.background-div{
-    padding:2rem;
-    background-color: #e4caf5;
-    margin-top: 5rem;
+.profile img{
+    width: 90%;
+    height: 100%;;
+}
+.full-name{
+    margin-bottom: 1rem;
+    font-family: 'Gill Sans';
+    font-size: 30px;
+    font-weight: bolder;
 }
 .box{
-    margin: 2rem;
+    position: relative;
+    margin-top: 5rem;
+    padding:2rem;
 }
-.box h1{
-    padding:0px 5px 0px 0px;
-    font-size: 1rem;
-    font-weight: 900;
-    margin-bottom: 1rem;
-}
-.each-field{
+.field-content{
+    padding-bottom: 1rem;
     display: flex;
-    padding:2px;
-    gap:20px;
+   gap:1rem;
 }
-
 
 
 
